* Changelog

** [[https://github.com/USTC-TNS/TAT/compare/v0.3.2...dev][Unreleased]]

*** Added
*** Changed
*** Deprecated
*** Removed
*** Fixed
+ *tetragono*: Fix a bug when try to save a file with directory name. The previous program only allows to save file into
  the current directory.

** [[https://github.com/USTC-TNS/TAT/compare/v0.3.1...v0.3.2][v0.3.2]] - 2022-02-28

*** Added
+ *tetragono*: Add =natural_gradient_by_direct_pseudo_inverse= to calculate natural gradient for sampling lattice. And
  add parameter =use_natural_gradient_by_direct_pseudo_inverse= (default is False), =natural_gradient_r_pinv= and
  =natural_gradient_a_pinv= for high/mid-level API in =gm_run= to use direct pseudo inverse to calculate natural
  gradient.
+ *tetraku*: Add Hamiltonian to another part of density matrix for density matrix of Heisenberg/Hubbard/tJ model. It is
  to ensure the result density is unitary despite of errors introduced by contract and approximation. This is controled
  by a new parameter =side= which is either =1= or =2=, default is =1=, which has the same behavior with before.
*** Changed
+ *TAT.py*: =sqrt= will calculate the square root of absoluate value in tensor elementwisely, instead of square root of
  value itself and return =nan= for negative number.
+ *tetraux*: Move =Configuration= for ansatz product state to an individual package named =tetraux= from =TAT.py=, which
  is not related to the tensor itself.
*** Deprecated
+ *tetragono*: =natural_gradient= for observer object is deprecated, users should specify the method to calculate
  natural gradient explicitly, which are =natural_gradient_by_direct_pseudo_inverse= and
  =natural_gradient_by_conjugate_gradient=.

** [[https://github.com/USTC-TNS/TAT/compare/v0.3.0...v0.3.1][v0.3.1]] - 2023-02-21

*** Added
+ *TAT.py*: Add binding for functions of Edge introduced in v0.3.0 such as =point_by_index=.
*** Changed
+ *TAT.py*: Update the function arguments names to keep the same with those in c++ side.